adjust simple css

--- a/app/views/bin.ejs
+++ b/app/views/bin.ejs
@@ -4,16 +4,30 @@
     <meta charset="utf-8">
     <title></title>
     <style>
-      * { margin: 0; padding: 0; }
-      body, html { height: 100%; }
-      body > div { height: 10%; }
-      body > textarea { height: 90%; width: 100%; border: 0;}
+      body {
+        max-width: 800px;
+        margin: 0 auto;
+      }
+      body > textarea {
+        width: 100%;
+        min-height: 400px;
+      }
+      body > div {
+        text-align: center;;
+      }
+      button {
+        background: green;
+        color: white;
+        font-size: 18px;
+        padding: 5px 20px;
+        border: 0;
+      }
     </style>
   </head>
   <body>
+    <textarea><%- body %></textarea>
     <div>
       <button>Save</button>
     </div>
-    <textarea><%- body %></textarea>
   </body>
 </html>
