Front end code. Make and update bin is working

--- a/app/views/bin.ejs
+++ b/app/views/bin.ejs
@@ -25,9 +25,12 @@
     </style>
   </head>
   <body>
-    <textarea><%- body %></textarea>
+    <textarea id="t"><%- body %></textarea>
     <div>
-      <button>Save</button>
+      <button id="s">Save</button>
     </div>
+    <script src="/public/jquery.js"></script>
+    <script src="/public/underscore.js"></script>
+    <script src="/public/main.js"></script>
   </body>
 </html>
