Finish front-end code

--- a/app/views/bin.ejs
+++ b/app/views/bin.ejs
@@ -27,6 +27,7 @@
   <body>
     <textarea id="t"><%- body %></textarea>
     <div>
+      <button onclick="location.href = '/'">New</button>
       <button id="s">Save</button>
     </div>
     <script src="/public/jquery.js"></script>
