Show progress logs to the user

--- a/app/views/bin.ejs
+++ b/app/views/bin.ejs
@@ -30,6 +30,7 @@
       <button onclick="location.href = '/'">New</button>
       <button id="s">Save</button>
     </div>
+    <div class="log"></div>
     <script src="/public/jquery.js"></script>
     <script src="/public/underscore.js"></script>
     <script src="/public/main.js"></script>
