--- a/app/views/bin.ejs
+++ b/app/views/bin.ejs
@@ -37,7 +37,7 @@
     </style>
   </head>
   <body>
-    <textarea id="t" autofocus><%- body %></textarea>
+    <textarea id="t" autofocus placeholder="Start typing..."><%- body %></textarea>
     <div class="buttons">
       <button onclick="location.href = '/'">New</button>
       <button id="s">Save milestone</button>
