Serve public from root

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -43,8 +43,8 @@
       <button id="s">Save milestone</button>
       <span class="log"></span>
     </div>
-    <script src="/public/jquery.js"></script>
-    <script src="/public/underscore.js"></script>
-    <script src="/public/main.js"></script>
+    <script src="/jquery.js"></script>
+    <script src="/underscore.js"></script>
+    <script src="/main.js"></script>
   </body>
 </html>
